// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fraction Snapshots No props 1`] = `
<div
  className="sc-AxhCb brTbkZ"
>
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <span
    className="sc-AxjAm kLNFlt"
  >
    5
     / 
    5
  </span>
</div>
`;

exports[`Fraction Snapshots Value 1`] = `
<div
  className="sc-AxhCb brTbkZ"
>
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <span
    className="sc-AxjAm kLNFlt"
  >
    3
     / 
    5
  </span>
</div>
`;

exports[`Fraction Snapshots Value over Max 1`] = `
<div
  className="sc-AxhCb brTbkZ"
>
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <span
    className="sc-AxjAm kLNFlt"
  >
    12
     / 
    10
  </span>
</div>
`;

exports[`Fraction Snapshots With Max 1`] = `
<div
  className="sc-AxhCb brTbkZ"
>
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <span
    className="sc-AxjAm kLNFlt"
  >
    10
     / 
    10
  </span>
</div>
`;

exports[`Fraction Snapshots With children 1`] = `
<div
  className="sc-AxhCb brTbkZ"
>
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <div
    className="sc-AxirZ dXpOWn"
    onClick={[Function]}
  />
  <span
    className="sc-AxjAm kLNFlt"
  >
    10
     / 
    10
  </span>
</div>
`;

exports[`Fraction Snapshots invalid Value 1`] = `
<div
  className="sc-AxhCb brTbkZ"
>
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <div
    className="sc-AxiKw gxuXjq"
    onClick={[Function]}
  />
  <span
    className="sc-AxjAm kLNFlt"
  >
     / 
    10
  </span>
</div>
`;
